--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!-- Additional Resource -->
 <p>
   <a href="https://drive.google.com/file/d/1mvwUbq1GcUxoWF_pMA7YPzUba6GP_-OR/view" target="_blank">
-    TetrisBench Results and Details
+    TetrisBench: Research page is currently under construction. Click here for the interim document.
   </a>
 </p>
-
 
 
 <!-- <!DOCTYPE html>
